--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -15,7 +15,7 @@
 
 body {
 	margin-top: 0px + @doc-line-height;
-	font-size: px + @doc-font-size;	
+	font-size: 0px + @doc-font-size;	
 }
 
 // Colors
